--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "kali",
+  "name": "zero",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +14,16 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.26.0",
+    "chart.js": "^3.7.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.3",
+    "swiper": "^8.0.7",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
